--- a/index.html
+++ b/index.html
@@ -1,23 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html id="main">
+
 <head>
-    <title>Tetris</title>
-    <style>
-      body {
-        background: #202028;
-        color: #fff;
-        font-family: sans-serif;
-        font-size: 2em;
-        text-align: center;
-      }
-      canvas {
-        border: solid .2em #fff;
-        height: 90vh;
-      }
-    </style>
+    <title id="titleTag">Tetris: Playing</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css" type="text/css">
+	
 </head>
+
 <body>
-    <div id="score"></div>
-    <canvas id="tetris" width="240" height="400" />
-    <script src="tetris.js"></script>
+    <div id="leftBar">
+        <h3>Modes:</h3></br>
+        <h4>Normal:</h4>
+    Normal Tetris like you know and love it! (well, kinda)</br></br>
+        <h4>Fill:</h4>
+        Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
+    </div>
+    <div id="box">
+        <div id="score" class="toptextInline"></div>
+        <canvas id="tetris" width="240" height="400" />
+    </div>
+    <div id="rightBar">
+		<div id="debug"></div>
+		<ul>
+			<li>Left:
+				<img src="img/aleft.png" height="32" width="42">
+				<img src="img/dleft.png" height="32" width="32">
+			</li>
+			<li>Right:
+				<img src="img/alright.png" height="32" width="42">
+				<img src="img/dright.png" height="32" width="32">
+			</li>
+			<li>Down:
+				<img src="img/adown.png" height="42" width="32">
+				<img src="img/ddown.png" height="32" width="32">
+			</li>
+			<li>Rotate:
+				<img src="img/lshoulder.png" height="23" width="62">
+				<img src="img/rshoulder.png" height="23" width="62">
+			</li>
+			<li>Pause/Start:
+				<img src="img/start.png" height="32" width="32">
+				<img src="img/select.png" height="32" width="32">
+			</li>
+			<li>Toggle Mode:
+				<img src="img/y.png" height="32" width="32">
+			</li>
+		</ul>
+        <div>State: <p id="gameState">Playing</p></div>
+        <div>Mode: <p id="gameMode">Normal</p></div>
+    </div>
+	<script src="js/tetris.js"></script>
+	<script src="js/gamepad.js"></script>
+	<script src="js/inputman.js"></script>
 </body>
+
 </html>
