--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="leftBar">
         <h3>Modes:</h3></br>
         <h4>Normal:</h4>
-    Normal Tetris like you know and love it! (well, kinda)</br></br>
+    Normal Tetris like you know and love it. (well, kinda)</br></br>
         <h4>Fill:</h4>
-        Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
+        Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-field.
     </div>
     <div id="box">
         <div id="score" class="toptextInline"></div>
