--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html id="main">
 
 <head>
-    <title id="titleTag">Tetris: Playing</title>
+    <title id="titleTag">Tetris</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
 	
