added link to repo and improved some css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 
 <body>
     <div id="leftBar">
-        <h3>Modes:</h3></br>
+        <h2>Modes:</h2></br>
         <h4>Normal:</h4>
     Normal Tetris like you know and love it! (well, kinda)</br></br>
         <h4>Fill:</h4>
         Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
+</br></br>
+<p id="smallURLHead">Found a bug or want to wish for a feature? Tell me: <a href="https://github.com/RealDekkia/switch-tetris" id="smallURLText">https://github.com/RealDekkia/switch-tetris</p></p>
+
     </div>
     <div id="box">
         <div id="score" class="toptextInline"></div>
