I'm still bad at using github

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div id="leftBar">
         <h2>Modes:</h2></br>
         <h4>Normal:</h4>
+	Normal tetris. Mostly. Give me time, I'm still working on it.
         <h4>Fill:</h4>
         Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
 </br></br>
-<p id="smallURLHead">Found a bug or want to wish for a feature? Tell me: <a href="https://github.com/RealDekkia/switch-tetris" id="smallURLText">https://github.com/RealDekkia/switch-tetris</p></p>
+<p id="smallURLHead">Found a bug, need a feature or just want to tell me how bad my programming is? Go there: <a href="https://github.com/RealDekkia/switch-tetris" id="smallURLText">https://github.com/RealDekkia/switch-tetris</p></p>
 
     </div>
     <div id="box">
