Links in a "Broser-game" for the Nintendo-Switch are bad

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <h4>Fill:</h4>
         Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
 </br></br>
-<p id="smallURLHead">Found a bug, need a feature or just want to tell me how bad my programming is? Go there: <a href="https://github.com/RealDekkia/switch-tetris" id="smallURLText">https://github.com/RealDekkia/switch-tetris</p></p>
+<p id="smallURLHead">Found a bug, need a feature or just want to tell me how bad my programming is? Go there: </p>
+<p id="smallURLText">https://github.com/RealDekkia/switch-tetris</p>
 
     </div>
     <div id="box">
