a single screen is not much.
Had to cut down on text on the left side to get everything displayed...

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="leftBar">
         <h2>Modes:</h2></br>
         <h4>Normal:</h4>
-	Normal tetris. Mostly. Give me time, I'm still working on it.
+	Normal tetris. Mostly.
         <h4>Fill:</h4>
         Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
 </br></br>
-<p id="smallURLHead">Found a bug, need a feature or just want to tell me how bad my programming is? Go there: </p>
+<p id="smallURLHead">Found a bug? Go there: </p>
 <p id="smallURLText">https://github.com/RealDekkia/switch-tetris</p>
 
     </div>
