--- a/index.html
+++ b/index.html
@@ -12,20 +12,13 @@
     <div id="leftBar">
         <h2>Modes:</h2></br>
         <h4>Normal:</h4>
-<<<<<<< HEAD
-    Normal Tetris like you know and love it. (well, kinda)</br></br>
-=======
->>>>>>> 4881577687dd2caa5eed5e136c9e4a108ab94722
+	Normal tetris. Mostly.
         <h4>Fill:</h4>
         Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-area.
 </br></br>
+<p id="smallURLHead">Found a bug? Go there: </p>
+<p id="smallURLText">https://github.com/RealDekkia/switch-tetris</p>
 
-<<<<<<< HEAD
-=======
-        Normal Tetris exept full lines won't get deleted. The goal ist to fill the game-field.
->>>>>>> a2fe664a94a8eaffa2f2df9fb56530b729b61f97
-=======
->>>>>>> 4881577687dd2caa5eed5e136c9e4a108ab94722
     </div>
     <div id="box">
         <div id="score" class="toptextInline"></div>
