fixed some issues

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html id="main">
+<html lang="en" id="main">
 
 <head>
-    <title id="titleTag">Tetris</title>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title id="titleTag">Tetris</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
 </head>
@@ -20,7 +21,7 @@
         <p id="debug">.</p>
         <div id="smallUrlInfo">
             <p id="smallURLHead">Found a bug? Go there: </p>
-            <p id="smallURLText">https://github.com/RealDekkia/switch-tetris</p>
+            <p id="smallURLText">https://github.com/tpguy825/switch-tetris</p>
         </div>
     </div>
     <div id="box">
@@ -33,42 +34,42 @@
             <tr>
                 <td>Left:</td>
                 <td>
-                    <img src="img/aleft.png" height="32" width="32">
-                    <img src="img/dleft.png" height="32" width="32">
+                    <img alt="ls l" src="img/aleft.png" height="32" width="32">
+                    <img alt="dpad l" src="img/dleft.png" height="32" width="32">
                 </td>
             </tr>
             <tr>
                 <td>Right:</td>
                 <td>
-                    <img src="img/alright.png" height="32" width="32">
-                    <img src="img/dright.png" height="32" width="32">
+                    <img alt="ls r" src="img/alright.png" height="32" width="32">
+                    <img alt="dpad r" src="img/dright.png" height="32" width="32">
                 </td>
             </tr>
             <tr>
                 <td>Down:</td>
                 <td>
-                    <img src="img/adown.png" height="32" width="32">
-                    <img src="img/ddown.png" height="32" width="32">
+                    <img alt="ls d" src="img/adown.png" height="32" width="32">
+                    <img alt="dpad d" src="img/ddown.png" height="32" width="32">
                 </td>
             </tr>
             <tr>
                 <td>Rotate:</td>
                 <td>
-                    <img src="img/lshoulder.png" height="23" width="62">
-                    <img src="img/rshoulder.png" height="23" width="62">
+                    <img alt="ls u" src="img/lshoulder.png" height="23" width="62">
+                    <img alt="dpad u" src="img/rshoulder.png" height="23" width="62">
                 </td>
             </tr>
             <tr>
-                <td>Pause/Start:</td>
+                <td>Pause/Start toggle:</td>
                 <td>
-                    <img src="img/start.png" height="32" width="32">
-                    <img src="img/select.png" height="32" width="32">
+                    <img alt="plus/start" src="img/start.png" height="32" width="32">
+                    <img alt="minus/select" src="img/select.png" height="32" width="32">
                 </td>
             </tr>
             <tr>
                 <td>Toggle Mode:</td>
                 <td>
-                    <img src="img/y.png" height="32" width="32">
+                    <img alt="y" src="img/y.png" height="32" width="32">
                 </td>
             </tr>
         </table>
