--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <script src="js/utils.js"></script>
         <div id="toggleFullscreen" onclick="toggleFullScreen(document.documentElement);">Toggle Fullscreen</div>
     </div>
-    <script src="js/tetris.js"></script>
-    <script src="js/gamepad.js"></script>
-    <script src="js/inputman.js"></script>
+	<script type="module">
+		import "./js/index.js"
+	</script>
 </body>
 
 </html>
